--- a/extension/popup/popup.scss
+++ b/extension/popup/popup.scss
@@ -25,24 +25,34 @@
     // Dark Theme
     --bg-primary-dark: #252525;
     --bg-primary-dark-hover: #303030;
+    --bg-secondary-dark: #1E1E1E;
     --bg-selected-dark: #393939;
     --bg-selected-dark-hover: #5D5D5D;
-    --bg-secondary-dark: #1E1E1E;
+
     --border-primary-dark: #61616133;
+
     --text-primary-dark: #FAFAFA;
     --text-secondary-dark: #999;
     --text-secondary-dark-hover: #FAFAFA;
 
     // Light Theme
-    --bg-primary-light: #f5f5f5;
-    --bg-hover-light: #f5f5f5;
-    --bg-active-light: #f5f5f5;
+    --bg-primary-light: #FFF;
     --bg-secondary-light: #f5f5f5;
-    --text-primary-light: #333;
-    --text-secondary-light: #666;
+    --bg-element-light: rgb(232 232 237 / 70%);
+    --bg-element-hover-light: rgb(232, 232, 237);
+    --bg-element-active-light: rgb(211 211 215);
+    --bg-element-shadow-light: inset 0 0 1px rgba(0,0,0,.7);
+
+    --text-primary-light: #1d1d1d;
+    --text-secondary-light: #797979;
+
+    --border-primary-light: 1px solid #FFF;
+
     --text-secondary-light-hover: #999;
-    --text-title-light: #1a73e8;
-    --border-primary-light: #e0e0e0;
+
+    --backdrop-filter: saturate(180%) blur(20px);
+    --bg-backdrop-light: rgba(255, 255, 255, 0.6);
+    --bg-backdrop-dark: rgba(0, 0, 0, 0.6);
     
     // Transition Timings
     --transition-fast: 0.1s ease;
@@ -64,11 +74,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: none;
+    outline: none;
 }
 
 body {
     width: 420px;
-    min-height: 100px;
+    min-height: 50px;
     max-height: 500px;
     height: auto;
     margin: 0;
@@ -116,7 +128,7 @@ body {
     }
 
     .theme-light & {
-        color: var(--text-title-light);
+        color: var(--color-primary);
     }
 }
 
@@ -171,10 +183,10 @@ header {
     padding: 8px;
     z-index: 101;
     transition: box-shadow var(--transition-normal);
+    backdrop-filter: saturate(180%) blur(20px);
 
     .theme-dark & {
-        background-color: var(--bg-primary-dark);
-        border-bottom: 1px solid #333;
+        background-color: var(--bg-backdrop-dark);
         box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 
         svg {
@@ -183,9 +195,8 @@ header {
     }
 
     .theme-light & {
-        background-color: #fff;
-        border-bottom: 1px solid #e0e0e0;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+        background-color: rgba(255, 255, 255, 0.8);
+        box-shadow: var(--bg-element-shadow-light);
 
         svg {
             fill: #666;
@@ -217,6 +228,7 @@ header {
     cursor: pointer;
     padding: 0;
     position: relative;
+    box-shadow: var(--bg-element-shadow-light);
 
     .theme-dark & {
         background-color: var(--bg-primary-dark);
@@ -228,11 +240,14 @@ header {
     }
 
     .theme-light & {
-        background-color: var(--bg-primary-light);
-        border: 1px solid var(--border-primary-light);
+        background-color: var(--bg-element-light);
 
-        &:hover {
-            background-color: var(--bg-hover-light);
+        &:hover, &:focus {
+            background-color: var(--bg-element-hover-light);
+        }
+
+        &:active {
+            background-color: var(--bg-element-active-light);
         }
     }
 
@@ -249,19 +264,15 @@ header {
 
 .clear-cache-button {
     svg {
-        fill: white;
         width: 16px;
         height: 16px;
         flex-shrink: 0;
     }
 
     &:hover, &:focus {
-        background-color: var(--color-warning-hover);
-
         &+ .cache-stats {
             display: block;
         }
-
     }
 
     .tooltip {
@@ -281,20 +292,20 @@ header {
     transform: translateY(-50%);
     padding: 4px 10px;
     border-radius: 6px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     white-space: nowrap;
     z-index: 10;
+    backdrop-filter: var(--backdrop-filter);
 
     .theme-dark & {
-        background-color: var(--bg-primary-dark);
+        background-color: var(--bg-backdrop-dark);
         color: var(--text-secondary-dark);
         border: 1px solid var(--border-primary-dark);
     }
 
     .theme-light & {
-        background-color: var(--bg-primary-light);
+        background-color: var(--bg-backdrop-light);
         color: var(--text-secondary-light);
-        border: 1px solid var(--border-primary-light);
+        box-shadow: var(--bg-element-shadow-light);
     }
 }
 
@@ -346,7 +357,7 @@ header {
     }
 
     .theme-light & {
-        background-color: var(--bg-primary-light);
+        background-color: var(--bg-secondary-light);
     }
 
     // Scrollbar styling
@@ -397,12 +408,10 @@ header {
 
     .theme-dark & {
         box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-        background-color: #252525;
     }
 
     .theme-light & {
         box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-        background-color: white;
     }
 }
 
@@ -429,7 +438,7 @@ header {
         color: var(--text-primary-light);
 
         &:hover {
-            background-color: var(--bg-hover-light);
+            background-color: var(--bg-element-hover-light);
         }
     }
 }
@@ -499,8 +508,8 @@ header {
     }
 
     .theme-light & {
-        background-color: var(--bg-secondary-light);
-        border: var(--border-primary-light) 1px solid;
+        background-color: var(--bg-primary-light);
+        box-shadow: var(--bg-element-shadow-light);
     }
 }
 
@@ -805,7 +814,6 @@ header {
     position: relative;
     width: 100%;
     height: 24px;
-    background: #242424;
     border-radius: 6px;
     cursor: pointer;
     user-select: none;
@@ -818,7 +826,6 @@ header {
         height: 100%;
         border-radius: 6px;
         background: var(--bg-primary-dark);
-        color: #FAFAFA;
         font-size: var(--font-body);
         transition: background-color var(--transition-normal);
         overflow: hidden;
@@ -827,26 +834,36 @@ header {
 
         .theme-dark & {
             border: 1px solid var(--border-primary-dark);
-        }
+            background-color: var(--bg-secondary-dark);
+            color: var(--text-primary-dark);
 
-        .theme-light & {
-            border: 1px solid var(--border-primary-light);
-        }
-    }
-
-    &:hover .selected-option {
-        background: var(--bg-primary-dark-hover);
-    }
-
-    &.open {
-        .selected-option {
-            background-color: var(--bg-selected-dark);
-
-            &:hover {
-                background-color: var(--bg-selected-dark-hover);
+            &:hover  {
+                background: var(--bg-primary-dark-hover);
             }
         }
 
+        .theme-light & {
+            background-color: var(--bg-element-light);
+            color: var(--text-primary-light);
+            box-shadow: var(--bg-element-shadow-light);
+
+            &:hover, &:focus {
+                background: var(--bg-element-hover-light);
+            }
+
+            &:active {
+                background: var(--bg-element-active-light);
+            }
+
+            path {
+                stroke: var(--text-primary-light);
+            }
+        }
+    }
+
+    
+    // styles when dropdown is open
+    &.open {
         .dropdown-icon svg {
             transform: rotate(180deg);
         }
@@ -855,6 +872,27 @@ header {
             max-height: 300px;
             opacity: 1;
             visibility: visible;
+        }
+
+        .theme-dark & {
+            .selected-option {
+                background-color: var(--bg-selected-dark);
+
+                &:hover, &:focus {
+                    background-color: var(--bg-selected-dark-hover);
+                }
+            }
+        }
+
+        .theme-light & {
+            .selected-option {
+                &:hover, &:focus {
+                    background-color: var(--bg-element-hover-light);
+                }
+                &:active {
+                    background-color: var(--bg-element-active-light);
+                }
+            }
         }
     }
 }
@@ -879,9 +917,7 @@ header {
     position: absolute;
     left: 0;
     margin-top: 1px;
-    background: var(--bg-primary-dark);
     border-radius: 6px;
-    border: 1px solid var(--border-primary-dark);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     z-index: 100;
     max-height: 0;
@@ -890,8 +926,14 @@ header {
     opacity: 0;
     visibility: hidden;
     width: 282px;
+    backdrop-filter: var(--backdrop-filter);
     -ms-overflow-style: none;
     scrollbar-width: none;
+
+    .theme-dark & {
+        background: var(--bg-backdrop-dark);
+        border: 1px solid var(--border-primary-dark);
+    }
 
     // Scrollbar styling
     &::-webkit-scrollbar {
@@ -910,6 +952,11 @@ header {
             background: #666;
         }
     }
+
+    .theme-light & {
+        background: var(--bg-backdrop-light);
+        box-shadow: var(--bg-element-shadow-light);
+    }
 }
 
 // Style for positioning wider options container
@@ -919,33 +966,59 @@ header {
 
 .dropdown-option {
     padding: 8px;
-    color: var(--text-secondary-dark);
     font-size: var(--font-body);
     transition: background-color var(--transition-fast);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    
+    .theme-dark & {
+        color: var(--text-secondary-dark);
 
-    &.selected {
-        background: var(--bg-selected-dark);
-        color: var(--text-primary-dark);
+        &.selected {
+            background: var(--bg-selected-dark);
+            color: var(--text-primary-dark);
 
-        &:hover {
-            background: var(--bg-selected-dark-hover);
+            &:hover {
+                background: var(--bg-selected-dark-hover);
+            }
+        }
+
+        &:not(.selected):hover {
+            position: relative;
+            color: var(--text-primary-dark);
+            background: var(--bg-selected-dark);
+        }
+
+        &.downloading {
+            background: var(--bg-selected-dark);
         }
     }
 
-    &:not(.selected):hover {
-        position: relative;
-        color: var(--text-primary-dark);
-        background: var(--bg-selected-dark);
+    .theme-light & {
+        color: var(--text-secondary-light);
+
+        &.selected {
+            background: var(--bg-element-active-light);
+            color: var(--text-primary-light);
+        }
+
+        &:hover {
+            position: relative;
+            color: var(--text-primary-light);
+            background: var(--bg-element-hover-light);
+        }
+
+        &.downloading {
+            background: var(--bg-element-active-light);
+        }
     }
 
     // Progress states
     &.downloading {
         position: relative;
         overflow: hidden;
-        color: var(--text-primary-dark);
+        color: white !important;
 
         &::after {
             content: '';
@@ -1075,6 +1148,7 @@ header {
     &.downloading {
         position: relative;
         overflow: hidden;
+        color: white !important;
 
         &::after {
             content: '';
@@ -1098,16 +1172,24 @@ header {
     &.complete {
         background-color: var(--color-success) !important;
         color: white !important;
+
+        path { stroke: white !important; }
     }
 
     &.error {
         background-color: var(--color-error) !important;
         color: white !important;
+
+        path { stroke: white !important; }
+
     }
 
     &.canceled {
         background-color: var(--color-warning) !important;
         color: white !important;
+
+        path { stroke: white !important; }
+
     }
 }
 
