--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -97,11 +97,8 @@ body.theme-light {
   color: var(--color-primary);
 }
 
-.initial-message,
-.no-videos-message {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.initial-message {
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -117,29 +114,23 @@ body.theme-light {
   font-size: var(--font-h2);
   padding: 16px;
 }
-.theme-dark .initial-message,
-.theme-dark .no-videos-message {
+.theme-dark .initial-message {
   color: #aaa;
 }
-.theme-light .initial-message,
-.theme-light .no-videos-message {
+.theme-light .initial-message {
   color: #757575;
 }
-.initial-message svg,
-.no-videos-message svg {
+.initial-message svg {
   margin-bottom: 16px;
   opacity: 0.7;
 }
-.theme-dark .initial-message svg,
-.theme-dark .no-videos-message svg {
+.theme-dark .initial-message svg {
   fill: #aaa;
 }
-.theme-light .initial-message svg,
-.theme-light .no-videos-message svg {
+.theme-light .initial-message svg {
   fill: #757575;
 }
-.initial-message p,
-.no-videos-message p {
+.initial-message p {
   margin: 4px 0;
 }
 
@@ -346,6 +337,11 @@ header {
 }
 .theme-light #videos::-webkit-scrollbar-thumb:hover {
   background: #aaa;
+}
+#videos > .initial-message:first-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .videos-container {
