refactor: now cache stats are created in a streamlined function with click handler, removed dupllicate handler from index.js, changed cache-stats text display logic to update container's text instead of separate tooltip, and now render calls getpreviewcachestats, which updates it in ui automatically

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -240,7 +240,7 @@ header {
   -ms-flex-negative: 0;
       flex-shrink: 0;
 }
-.clear-cache-button:hover + .cache-stats, .clear-cache-button:focus + .cache-stats {
+.clear-cache-button:hover .cache-stats, .clear-cache-button:focus .cache-stats {
   display: block;
 }
 .clear-cache-button .tooltip {
