--- a/extension/popup/popup.scss
+++ b/extension/popup/popup.scss
@@ -269,7 +269,7 @@ header {
     }
 
     &:hover, &:focus {
-        &+ .cache-stats {
+        .cache-stats {
             display: block;
         }
     }
