upd: styles, divs to sections, new text lines on queues, light theme tabs fix

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -2,12 +2,12 @@
 :root {
   --color-primary: #037AFB;
   --color-primary-hover: #0369d6;
-  --color-error: #C62828;
+  --color-error: #FF3B42;
   --color-error-hover: #b71c1c;
-  --color-success: #43A047;
-  --color-success-hover: #27642a;
-  --color-warning: #FF5722;
-  --color-warning-hover: #E64A19;
+  --color-success: #00CA55;
+  --color-success-hover: #205838;
+  --color-warning: #FF8738;
+  --color-warning-hover: #FF8F45;
   --bg-primary-dark: #252525;
   --bg-primary-dark-hover: #303030;
   --bg-secondary-dark: #1E1E1E;
@@ -306,73 +306,79 @@ header .title-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: sticky;
   width: 100%;
-  top: 52px;
-  z-index: 100;
-  border-bottom: 1px solid transparent;
+  padding: 3px;
+  margin: 8px;
+  border-radius: 16px;
+  gap: 7px;
 }
 .theme-dark .tab-navigation {
-  border-bottom-color: var(--border-primary-dark);
+  background-color: var(--bg-primary-dark);
+  border: var(--border-primary-dark) 1px solid;
 }
 .theme-light .tab-navigation {
-  border-bottom-color: rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: var(--bg-element-shadow-light);
           box-shadow: var(--bg-element-shadow-light);
+}
+.tab-navigation:hover .tab-button::after {
+  display: none;
 }
 
 .tab-button {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  padding: 12px 8px;
+  padding: 6px;
   border: none;
   background: none;
   cursor: pointer;
   font-size: var(--font-h2);
   font-weight: 500;
   position: relative;
-  -webkit-transition: all var(--transition-normal);
-  transition: all var(--transition-normal);
+  -webkit-transition: all var(--transition-fast);
+  transition: all var(--transition-fast);
   text-align: center;
+  border-radius: 16px;
+  position: relative;
+}
+.tab-button.active {
+  background-color: var(--color-primary) !important;
+  color: var(--text-primary-dark) !important;
+}
+.tab-button.active:hover {
+  background-color: var(--color-primary-hover);
+}
+.tab-button:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  height: 80%;
+  right: -4px;
+  width: 1px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 .theme-dark .tab-button {
   color: var(--text-secondary-dark);
+}
+.theme-dark .tab-button:not(:last-child)::after {
+  background-color: var(--bg-selected-dark);
 }
 .theme-dark .tab-button:hover {
   color: var(--text-primary-dark);
   background-color: var(--bg-primary-dark-hover);
 }
-.theme-dark .tab-button.active {
-  color: var(--color-primary);
-}
-.theme-dark .tab-button.active::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 2px;
-  background-color: var(--color-primary);
-}
 .theme-light .tab-button {
   color: var(--text-secondary-light);
 }
+.theme-light .tab-button:not(:last-child)::after {
+  background-color: var(--bg-element-active-light);
+}
 .theme-light .tab-button:hover {
-  color: var(--text-primary-light);
   background-color: var(--bg-element-hover-light);
 }
-.theme-light .tab-button.active {
-  color: var(--color-primary);
-}
-.theme-light .tab-button.active::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 2px;
-  background-color: var(--color-primary);
+.theme-light .tab-button:focus {
+  background-color: var(--bg-element-active-light);
 }
 
 .tab-contents {
